<resources>
    <string name="app_name">Foodgram</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Войти</string>
    <string name="create_account">Еще не зарегистрированы?</string>
    <string name="name_surname">Имя и фамилия</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="again_text">Еще раз</string>
    <string name="sign_up_text">Регистрация</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_title">Default title</string>
    <string name="default_subtitle">Default content</string>
    <string name="action_share">ПОДЕЛИТЬСЯ</string>
    <string name="action_commend">КОММЕНТАРИИ</string>
    <string name="name">Имя</string>
    <string name="action_exit">Выход</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="messages">Сообщения</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="cancel_request">Отменить заявку</string>
    <string name="send_message">Написать сообщение</string>
    <string name="accept_request">Принять заявку</string>
    <string name="type_message">Введите сообщение</string>
    <string name="chats">Диалоги</string>
    <string name="recipes">Рецепты</string>
    <string name="my_friends">Мои друзья</string>
    <string name="delete_friend">Удалить из друзей</string>
    <string name="no_recipes">Вы еще не поделились рецептами</string>
    <string name="friends">Друзья</string>
    <string name="no_friends">У вас пока нет друзей</string>
    <string name="no_dialogs">У вас еще нет диалогов</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="photo">Фото</string>
    <string name="open_photo">Открыть фото</string>
    <string name="edit_photo">Сменить фото</string>
    <string name="friends_size"> друзей</string>
    <string name="zero_friends">0 друзей</string>
</resources>
